[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "grok-api-python"
version = "1.0.0"
description = "Grok API 逆向工程项目 - Python版本"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "grok-api-python", email = "example@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "flask>=2.3.0",
    "flask-cors>=4.0.0",
    "requests>=2.31.0",
    "curl-cffi>=0.5.0",
    "werkzeug>=2.3.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/your-username/grok-api-python"
Repository = "https://github.com/your-username/grok-api-python.git"
Issues = "https://github.com/your-username/grok-api-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["app.py", "templates/*"]

[project.scripts]
grok-api = "app:main"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short" 